--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
+spring.servlet.multipart.enabled = true
+spring.servlet.multipart.location=D:\\fileupload
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
+org.example.b01.path = D:\\fileupload
+
+
 logging.level.org.springframework=info
 logging.level.org.zerock=debug
 
