--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ org.example.b01.path = D:\\fileupload
 logging.level.org.springframework=info
 logging.level.org.zerock=debug
 
-
+logging.level.org.springframework.security = trace
